@@ -10,4 +10,3 @@
   (eg, hostname/hostrange/regex or ip-addr/netmask)
 - munged hangs if client does not respond to auth req (auth via fd passing)
 - client hangs if auth-pipe-dir is permissioned wrong (auth via fd passing)
-- src/libcommon/munge_defs.h does not recognize sysconfdir & localstatedir.
