@@ -1,3 +1,11 @@
+2006-05-08  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* configure.ac: Added X_AC_EXPAND_INSTALL_DIRS.
+	* config/x_ac_expand_install_dirs.m4: Added.
+	* src/libcommon/munge_defs.h: Updated MUNGE_SOCKET_NAME,
+	  MUNGE_AUTH_PIPE_DIR, MUNGED_LOGFILE, MUNGED_RANDOM_SEED, and
+	  MUNGED_SECRET_KEY to use the expanded install dir names in config.h.
+
 2006-05-05  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* src/etc/munge.init, src/etc/munge.sysconfig: Tweaked defs.
